--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: My junkyard
+title: Everything Will Just Work Out Fine
 subtitle: try to be a man of focus,commitment and sheer will
-description: a postgraduate sutdent
+description: postgraduate sutdent
 keywords: 
 author: ZrBac
 language: zh-Hans
